--- a/index.html
+++ b/index.html
@@ -2,40 +2,59 @@
     <meta charset="utf-8">
      <title>My Cool Website Again</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link
-  rel="stylesheet"
-  href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
-  integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-  crossorigin="anonymous"
-/>
     <link rel="stylesheet" href="styles.css">
-
-
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+    crossorigin="anonymous"
+  />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet"
 </head>
 
 
 <Body>
     <div class="navigation-wrapper">
-        <div class="contact-hours-wrapper">
-            555-555-5555
-            10 AM - MIDNIGHT
-        </div>
-        <div>
-            <div>
-            <a href="index.html">Homepage</a>
+        <div class="left-column">
+            <div class="icon">
+                <i class="fas fa-phone-volume"></i>
             </div>
-            <div>
-            <a href="about.html">About</a>
-            </div>
-            <div>
-            <a href="menu.html">Menu</a>
-            </div>
-            <div>
-            <a href="contact.html">Contact</a>
+            <div class="contact-hours-wrapper">
+                <div class="phone">
+                555-555-5555
+                </div>
+                <div class="hours">
+                10 AM - MIDNIGHT
+                </div>
             </div>
         </div>
-        <div class="address-wrapper">123 Any Street
-            Boise, ID 12345
+        <div class="center-column">    
+            <div class="banner-image">
+                <img src="images/logos/decamp-fantastic-fries-logo-white.png" alt="Logo">
+            </div>
+        <div class="links-wrapper">  
+            <div class="nav-link">
+                <a href="index.html">Homepage</a>
+            </div>
+            <div class="nav-link">
+                <a href="about.html">About</a>
+            </div>
+            <div class="nav-link">
+                <a href="menu.html">Menu</a>
+            </div>
+            <div class="nav-link">
+                <a href="contact.html">Contact</a>
+            </div>
         </div>
+    </div>
+        <div class="right-column"></div>
+            <div class="address-wrapper">
+                <i class="fas fa-map-marker-alt"></i>
+                123 Any Street
+                Boise, ID 12345
+            </div>
     </div>
 </Body>
