--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <head>
     <meta charset="utf-8">
-     <title>My Cool Website Again</title>
+     <title>Homepage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/common.css">
+    <link rel="stylesheet" href="styles/nav.css">
+    <link rel="stylesheet" href="styles/homepage.css">
     <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
@@ -12,7 +14,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 
 
@@ -37,7 +41,7 @@
             </div>
         <div class="links-wrapper">  
             <div class="nav-link">
-                <a href="index.html">Homepage</a>
+                <a href="index.html">Home</a>
             </div>
             <div class="nav-link">
                 <a href="about.html">About</a>
@@ -49,12 +53,49 @@
                 <a href="contact.html">Contact</a>
             </div>
         </div>
-    </div>
-        <div class="right-column"></div>
+        </div>
+        <div class="right-column">
             <div class="address-wrapper">
-                <i class="fas fa-map-marker-alt"></i>
-                123 Any Street
-                Boise, ID 12345
+               <a href="contact.html"> 123 Any Street<br>
+                Boise, ID 12345</a>
             </div>
+            <div class="contact-icon">
+                <a href="contact.html">
+            <i class="fas fa-map-marker-alt"></i>
+        </a>
+        </div>
+        </div>
+    
     </div>
+    <div class="hero-section">
+        <div class="top-heading">
+            <h1>HTML Styled Fries</h1>
+        </div>
+        <div class="bottom-heading">
+            <h3>Coding Fuel</h3>
+        </div>
+<div class="features-section">
+    <div class="columns-wrapper">
+            <div class="column">
+                <i class="fas fa-truck"></i>
+
+                <p>We deliver!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="column">
+                <i class="fas fa-pizza-slice"></i>
+                
+                <p>You can eat all you want!</p>
+                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro.</P>
+            </div>
+            <div class="column">
+                <i class="fas fa-chart-line"></i>
+
+                <p>We have 100+ fries!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo.</p>
+            </div>
+
+
+    </div>
+</div>
 </Body>
