--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <div class="bottom-heading">
             <h3>Coding Fuel</h3>
         </div>
+    </div>
 <div class="features-section">
     <div class="columns-wrapper">
             <div class="column">
@@ -84,7 +85,7 @@
             </div>
             <div class="column">
                 <i class="fas fa-pizza-slice"></i>
-                
+
                 <p>You can eat all you want!</p>
                 <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro.</P>
             </div>
