--- a/index.html
+++ b/index.html
@@ -98,5 +98,52 @@
 
 
     </div>
+
+</div>
+<div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3327.0765176913264!2d-111.92875828479936!3d33.49938628076005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b0bbdbed13a73%3A0xfab78c0f014377d8!2sDiego+Pops!5e0!3m2!1sen!2sus!4v1534788183429" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
+
+
+
+<div class="footer">
+<span class="phone">
+    555 555 5555
+</span>
+
+<span class="hours">
+    10 am - midnight
+</span>
+
+    <div class="links-wrapper">  
+        <div class="nav-link">
+            <a href="index.html">Home</a>
+        </div>
+        <div class="nav-link">
+            <a href="about.html">About</a>
+        </div>
+        <div class="nav-link">
+            <a href="menu.html">Menu</a>
+        </div>
+        <div class="nav-link">
+            <a href="contact.html">Contact</a>
+        </div>
+    </div>
+<div class="social-media-icons-wrapper"></div>
+ <a href="#">
+    <i class="fab fa-instagram"></i>
+ </a>
+
+
+    <a href="#">
+        <i class="fab fa-twitter"></i>
+    </a>
+
+    <a href="#"> 
+        <i class="fab fa-facebook-f"></i>
+    </a>
+        <div class="copyright-wrapper">
+            &copy; 2018 Devcamp &#124; All rights reserved
+        </div>
 </div>
 </Body>
