--- a/about.html
+++ b/about.html
@@ -1,16 +1,85 @@
 <head>
     <meta charset="utf-8">
-     <title>About</title>
+    <title>About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/common.css">
+    <link rel="stylesheet" href="styles/nav.css">
 
 
 </head>
 
-<Body>
-    <h1>About</h1>
-    <a href="index.html">Homepage</a>
-    <a href="about.html">About</a>
-    <a href="menu.html">Menu</a>
-    <a href="contact.html">Contact</a>
-</Body>
+
+<div class="skewed-header">
+    <div class="header-bg" style="background-image: url('images/backgrounds/about-us.jpg'); height: 400;"></div>
+    <div class="skewed-header-wrapper">
+        <div class="skewed-header-content">
+            <div class="heading-wrapper">
+                <h1>About Us</h1>
+            </div>
+
+            <div class="links-wrapper">
+                <div class="nav-link">
+                    <a href="index.html">Home</a>
+                </div>
+                <div class="nav-link">
+                    <a href="about.html">About Us</a>
+                </div>
+                <div class="nav-link">
+                    <a href="menu.html">Menu</a>
+                </div>
+                <div class="nav-link">
+                    <a href="take_out.html">Take Out</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="page-container">
+    <div class="content-wrapper">
+        <img src="images/people/chef.jpg" alt="Featured Chef" id="Chef">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maiores, error sed, iure odio fuga eos nemo
+            perferendis corporis magni mollitia. Voluptatibus culpa doloribus voluptatum nam error. Sit inventore,
+            nostrum dolore maxime aliquid recusandae omnis laudantium! Sapiente libero amet neque, dolores quibusdam
+            numquam voluptate laboriosam voluptatum aut culpa illum eaque eum itaque inventore enim sint. Voluptates
+            ratione doloremque tempora. Deleniti totam distinctio vel accusantium. Harum alias tempore maiores
+            asperiores accusamus inventore optio debitis itaque accusantium veritatis numquam, rerum ad nemo cumque
+            doloribus animi vitae voluptatibus perferendis! Dolor soluta consectetur nostrum officiis. Vel officiis
+            culpa rerum beatae. Nesciunt distinctio error illo, inventore minima magni nostrum iure magnam cumque esse
+            sed fugit quibusdam architecto saepe soluta necessitatibus incidunt odit dignissimos veniam adipisci ex?
+            Culpa eum non voluptatibus ipsam adipisci ab odit. Amet adipisci est corporis ipsa voluptatem aspernatur
+            quasi. Cupiditate mollitia numquam magni, reprehenderit reiciendis natus esse repellat doloribus culpa
+            iusto, possimus quidem quos unde autem impedit amet fugiat? Enim doloribus ducimus eius ipsam veniam
+            aspernatur placeat. Incidunt sit iusto odit placeat, temporibus neque earum fuga recusandae soluta unde
+            minima aliquid possimus voluptate tempore veniam dolores nemo modi ipsum. Animi delectus amet corrupti
+            consequuntur inventore! Culpa, sed minus nesciunt qui beatae quia?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, laudantium at molestias minima eaque quas ipsam
+            maxime, culpa dolore, id dignissimos! Alias recusandae ea unde laborum fuga, dolores, beatae maiores quas
+            rerum, consectetur facere explicabo ipsa pariatur vel quisquam earum consequuntur porro nihil aspernatur
+            quibusdam dicta ipsam officia. Quaerat minus et vero ab corporis? Velit molestiae consequatur praesentium
+            magni accusamus sapiente iusto. Libero dolorum molestiae suscipit quaerat aut a inventore ipsam! Nobis
+            natus, ducimus labore odio, error id mollitia eum iure, voluptas animi quisquam quod. Corrupti a accusamus
+            doloribus magni quod excepturi distinctio ad aut? Numquam officiis quas animi necessitatibus doloribus, amet
+            dicta minus consectetur? Ea dignissimos inventore numquam. Amet optio perspiciatis omnis, ipsam adipisci
+            quas, quibusdam dolorum est similique minima explicabo odio dolore. Ab possimus assumenda veritatis nostrum
+            autem odio rem rerum obcaecati ipsa. Natus, ex expedita! Alias aperiam tenetur similique facere? Fugiat
+            ipsum fugit, illo reprehenderit eum iusto assumenda neque, quas, veniam molestias natus iure quibusdam ab id
+            ea. Delectus, quasi explicabo. Odio nihil, error rem voluptatum fuga laboriosam veritatis culpa architecto
+            expedita at qui, dolorum iste ea in deleniti ipsum temporibus nostrum ullam harum nisi dolorem unde,
+            recusandae pariatur! Non fuga harum ducimus nam, aperiam earum doloribus, ad excepturi velit amet, impedit
+            hic quas sit. Ad dignissimos nihil ab inventore necessitatibus quas. Doloribus natus voluptate non unde
+            porro ipsum? Fugit consectetur deleniti quasi eligendi dignissimos sapiente suscipit exercitationem
+            molestias illum, sequi quae nostrum? Ipsam dicta ducimus minima harum animi saepe officiis veniam
+            necessitatibus et aliquam consequuntur officia labore optio eius, quidem laudantium velit eveniet
+            perspiciatis sed commodi in. Suscipit provident voluptatibus tenetur repudiandae libero. Delectus quasi
+            maiores temporibus quisquam, aperiam esse ex et. Libero numquam cupiditate ab accusamus laborum quaerat
+            minima accusantium dolor. Sint ad possimus, perferendis beatae animi hic consequuntur, alias doloribus
+            fugiat vel at esse praesentium sit aliquam illo nihil laboriosam tenetur officiis maxime in nesciunt
+            obcaecati suscipit dolorum. Sint obcaecati ipsum fuga, eaque quod asperiores optio iusto et, magnam sequi
+            rem laboriosam, aliquid blanditiis? Nisi corrupti voluptatem, perspiciatis quisquam debitis repellendus
+            blanditiis non adipisci recusandae voluptatibus placeat nobis, quos architecto delectus tempore dicta
+            excepturi.</p>
+            
+    </div>
+</div>
