Updated about.html and common,css

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 
 <div class="page-container">
     <div class="content-wrapper">
-        <img src="images/people/chef.jpg" alt="Featured Chef" id="Chef">
+        <img src="images/people/chef.jpg" alt="Featured Chef" id="chef">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maiores, error sed, iure odio fuga eos nemo
             perferendis corporis magni mollitia. Voluptatibus culpa doloribus voluptatum nam error. Sit inventore,
             nostrum dolore maxime aliquid recusandae omnis laudantium! Sapiente libero amet neque, dolores quibusdam
