added 2 images and updated 2 htmls

--- a/about.html
+++ b/about.html
@@ -80,6 +80,14 @@
             rem laboriosam, aliquid blanditiis? Nisi corrupti voluptatem, perspiciatis quisquam debitis repellendus
             blanditiis non adipisci recusandae voluptatibus placeat nobis, quos architecto delectus tempore dicta
             excepturi.</p>
-            
+<div class="squares-wrapper">
+
+
+<div class="squares"></div>
+
+</div>
+
+
+
     </div>
 </div>
