--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,106 @@
 <head>
-    <meta charset="utf-8">
-    <title>Contact</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8" />
+    <title>Contact Us</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles/common.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/footer.css" />
+    <link rel="stylesheet" href="styles/skewed-header.css" />
+    <link rel="stylesheet" href="styles/nav.css" />
+    <link rel="stylesheet" href="styles/page-container.css" />
+    <link rel="stylesheet" href="styles/helpers.css" />
+  </head>
+  <body>
+    <div class="skewed-header">
+      <div
+        class="header-bg"
+        style="
+          background-image: url('images/backgrounds/contact.jpg');
+          height: 400;
+        "
+      ></div>
+      <div class="skewed-header-wrapper">
+        <div class="skewed-header-content">
+          <div class="heading-wrapper">
+            <h1>Contact</h1>
+          </div>
+  
+          <div class="links-wrapper">
+            <div class="nav-link">
+              <a href="index.html">Home</a>
+            </div>
+            <div class="nav-link">
+              <a href="about.html">About Us</a>
+            </div>
+            <div class="nav-link">
+              <a href="menu.html">Menu</a>
+            </div>
+            <div class="nav-link">
+              <a href="contact.html">Contact</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <div class="page-container">
+       <div class="contact-grid-wrapper">
+<div class="company-metadata-sidebar-wrapper">
+    <div class="logo">
+        <img src="images/logos/decamp-fantastic-fries-logo-dark.png" alt="">
+    </div>
+</div>
 
-</head>
+
+       </div>
+    </div> 
+      <div class="spacer60"></div>
 
 
-<Body>
-    <h1>Contact</h1>
-    <a href="index.html">Homepage</a>
-    <a href="about.html">About</a>
-    <a href="menu.html">Menu</a>
-    <a href="contact.html">Contact</a>
-</Body>
+  
+    <div class="footer">
+      <div class="logo-footer">
+        <img
+          src="images/logos/decamp-fantastic-fries-logo-white.png"
+          alt="logo-footer"
+        />
+      </div>
+      <div class="footer-phone-hours">
+        <span class="phone"> 555 555 5555 </span>
+  
+        <span class="hours"> 10 am - midnight </span>
+      </div>
+  
+      <div class="links-wrapper">
+        <div class="nav-link">
+          <a href="index.html">Home</a>
+        </div>
+        <div class="nav-link">
+          <a href="about.html">About</a>
+        </div>
+        <div class="nav-link">
+          <a href="menu.html">Menu</a>
+        </div>
+        <div class="nav-link">
+          <a href="contact.html">Contact</a>
+        </div>
+      </div>
+      <div class="social-media-icons-wrapper">
+        <a href="#">
+          <i class="fab fa-instagram"></i>
+        </a>
+  
+        <a href="#">
+          <i class="fab fa-twitter"></i>
+        </a>
+  
+        <a href="#">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+      </div>
+      <div class="copyright-wrapper">
+        &copy; 2018 Devcamp &#124; All rights reserved
+      </div>
+    </div>
+  </body>
+  
