finished desktop version of the website and started on the mobile version

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/homepage.css">
+    <link rel="stylesheet" href="styles/media-queries.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -75,22 +76,22 @@
     <div class="features-section">
         <div class="columns-wrapper">
             <div class="column">
-                <i class="fas fa-truck"></i>
-
+                
+                <i class="fas fa-truck-monster"></i>
                 <p>We deliver!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="column">
-                <i class="fas fa-pizza-slice"></i>
+                <i class="fas fa-wifi"></i>
 
-                <p>You can eat all you want!</p>
-                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro.</P>
+                <p>You can code from here</p>
+                <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</P>
             </div>
             <div class="column">
                 <i class="fas fa-chart-line"></i>
 
                 <p>We have 100+ fries!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
             </div>
 
 
