--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles/page-container.css" />
   <link rel="stylesheet" href="styles/square-grid.css" />
   <link rel="stylesheet" href="styles/helpers.css" />
-  <link rel="stylesheet" href="styles/media-queries.css">
+  <link rel="stylesheet" href="./styles/media-queries.css">
 </head>
 <body>
   <div class="skewed-header">
@@ -18,8 +18,8 @@
       style="
         background-image: url('images/backgrounds/about-us.jpg');
         height: 400;
-      "
-    ></div>
+      ">
+      </div>
     <div class="skewed-header-wrapper">
       <div class="skewed-header-content">
         <div class="heading-wrapper">
