--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles/nav.css" />
   <link rel="stylesheet" href="styles/square-grid.css" />
   <link rel="stylesheet" href="styles/helpers.css">
+  <link rel="stylesheet" href="styles/media-queries.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 
